--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -176,6 +176,10 @@ h1, h2, h3, h4
     @include boxsizing
     .tab-pane
       overflow: hidden
+      .tab-pane-header
+        padding: 3% 3% 0
+        h3
+          margin: 0px
 
 .word-wrap
   word-wrap: break-word
