[spherification] remove hardcoding of courses

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -93,8 +93,8 @@
           = image_tag 'http://placehold.it/570x320'
           %h4= "The Creative Kit takes you through these lessons"
           %ul
-            - @creative.each do |activity|
-              %li= activity.title
+            / - @creative.each do |activity|
+            /   %li= activity.title
       .row.section
         .span4.offset4.well
           %h4.text-center= "The Creative Kit $39"
@@ -124,8 +124,8 @@
           = image_tag 'http://placehold.it/570x320'
           %h4= "The Enthusiast Kit takes you through these lessons"
           %ul
-            - @enthusiast.each do |activity|
-              %li= activity.title
+            / - @enthusiast.each do |activity|
+            /   %li= activity.title
       .row.section
         .span4.offset4.well
           %h4.text-center= "The Enthusiast Kit $70"
@@ -155,8 +155,8 @@
           = image_tag 'http://placehold.it/570x320'
           %h4= "The Professional Kit takes you through these lessons"
           %ul
-            - @professional.each do |activity|
-              %li= activity.title
+            / - @professional.each do |activity|
+            /   %li= activity.title
       .row.section
         .span4.offset4.well
           %h4.text-center= "The Professional Kit $119"
