--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -89,6 +89,18 @@
             %li 50 g Calcium Lactate Gluconate
             %li 50 g Calcium Chloride
             %li 50 g Xanthan Gum
+          .annotated-object
+            / = check_box_tag :'creative-annotation-toggle', nil, false, class: 'annotation-toggle'
+            = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
+            .annotations
+              .annotation Syringe 
+              .annotation Stainless-steel straining spoon
+              .annotation 25 g Sphere Magic
+              .annotation 25 g Sodium Citrate
+              .annotation 50 g Calcium Lactate Gluconate
+              .annotation 50 g Calcium Chloride
+              .annotation 50 g Xanthan Gum
+
         .span5
           = image_tag 'https://www.filepicker.io/api/file/Mn5unIy2TSGXjBRiRsnj'
           /= image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA
