--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -84,7 +84,7 @@
       /     .annotation 50 g Calcium Lactate Gluconate
       /     .annotation 50 g Calcium Chloride
       /     .annotation 50 g Xanthan Gum
-      .row
+      .row-fluid
         .span6
           = image_tag 'https://www.filepicker.io/api/file/Mn5unIy2TSGXjBRiRsnj'
         .span6
@@ -102,7 +102,7 @@
   .row.section
     .span5.offset1
       = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
-      .row
+      .row-fluid
         .span6
           = image_tag 'https://www.filepicker.io/api/file/10jMQrfrTYazji1Sc4XA'
         .span6
@@ -119,7 +119,7 @@
   .row.section
     .span5.offset1
       = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
-      .row
+      .row-fluid
         .span6
           = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'
         .span6
