--- a/app/assets/stylesheets/annotations.css.sass
+++ b/app/assets/stylesheets/annotations.css.sass
@@ -19,6 +19,31 @@
 .annotated.annotated-creation
   .annotations
     .annotation
+      // Syringe
       &:nth-child(1)
         top: 20%
         left: 70%
+      // Spoon
+      &:nth-child(2)
+        top: 10%
+        left: 10%
+      // Sphere Magic
+      &:nth-child(3)
+        top: 70%
+        left: 0%
+      // Sodium Citrate
+      &:nth-child(4)
+        top: 90%
+        left: 20%
+      // Calcium Lactate Gluconate
+      &:nth-child(5)
+        top: 90%
+        left: 40%
+      // Calcium Chloride
+      &:nth-child(6)
+        top: 90%
+        left: 60%
+      // Xanthan Gum
+      &:nth-child(7)
+        top: 90%
+        left: 90%
