--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -79,7 +79,7 @@
 %hr
 .container
   .row.section
-    .span5.offset1
+    .span6
       / = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
       .annotated.annotated-creation
         / = check_box_tag :'annotation-toggle-creative', nil, false, class: 'annotation-toggle'
