--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -17,6 +17,12 @@
   -webkit-box-shadow: 0px 0px 5px black
   -o-box-shadow: 0px 0px 5px black
 
+=annotation-shadow
+  box-shadow: 0px 1px 4px rgba(0,0,0,0.2)
+  -moz-box-box-shadow: 0px 1px 4px rgba(0,0,0,0.2)
+  -webkit-box-shadow: 0px 1px 4px rgba(0,0,0,0.2)
+  -o-box-shadow: 0px 1px 4px rgba(0,0,0,0.2)
+
 =radius($value)
   border-radius: $value
   -moz-border-radius: $value
