--- a/app/assets/stylesheets/annotations.css.sass
+++ b/app/assets/stylesheets/annotations.css.sass
@@ -4,17 +4,37 @@
   position: relative
   img
     width: 100%
+    @include transition(all 300ms ease-in-out)
   .annotations
     position: absolute
     top: 0px
     left: 0px
     width: 100%
     height: 100%
+    opacity: 0
+    @include transition(all 300ms ease-in-out)
     .annotation
       background: white
       float: left
       position: absolute
-      padding: 10px
+      padding: 5px 8px
+      font-family: 'Raleway', sans-serif
+      font-size: 16px
+      border: 1px solid $orange
+  &:hover
+    cursor: pointer
+    img
+      transform: scale(0.8)
+      -webkit-transform: scale(0.8)
+      -moz-transform: scale(0.8)
+      -o-transform: scale(0.8)
+    .annotations
+      width: 115%
+      opacity: 1
+      transform: scale(0.8)
+      -webkit-transform: scale(0.8)
+      -moz-transform: scale(0.8)
+      -o-transform: scale(0.8)
 
 .annotated.annotated-creation
   .annotations
@@ -22,28 +42,28 @@
       // Syringe
       &:nth-child(1)
         top: 20%
-        left: 70%
+        left: 60%
       // Spoon
       &:nth-child(2)
         top: 10%
-        left: 10%
+        left: -14%
       // Sphere Magic
       &:nth-child(3)
-        top: 70%
-        left: 0%
+        top: 50%
+        left: -14%
       // Sodium Citrate
       &:nth-child(4)
-        top: 90%
-        left: 20%
+        top: 70%
+        left: 0%
       // Calcium Lactate Gluconate
       &:nth-child(5)
         top: 90%
-        left: 40%
+        left: 20%
       // Calcium Chloride
       &:nth-child(6)
-        top: 90%
+        top: 70%
         left: 60%
       // Xanthan Gum
       &:nth-child(7)
-        top: 90%
-        left: 90%
+        top: 50%
+        left: 65%
