--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -136,8 +136,21 @@
 %hr
 .container
   .row.section
-    .span5.offset1
-      = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
+    .span6
+      /= image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
+      .annotated.annotated-professional
+        = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
+        .annotations
+          .annotation Syringe 
+          .annotation Stainless-steel straining spoon
+          .annotation 25 g Sphere Magic
+          .annotation 25 g Sodium Citrate
+          .annotation 50 g Calcium Lactate Gluconate
+          .annotation 50 g Calcium Chloride
+          .annotation 50 g Xanthan Gum
+          .annotation High-Accuracy Scale
+          .annotation Silicon Mold
+          .annotation Caviar Dosing Tray
       .row-fluid
         .span6
           = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'
