--- a/app/assets/stylesheets/annotations.css.sass
+++ b/app/assets/stylesheets/annotations.css.sass
@@ -107,3 +107,47 @@
       &:nth-child(9)
         top: 20%
         left: 70%
+
+.annotated.annotated-professional
+  .annotations
+    .annotation
+      // Syringe
+      &:nth-child(1)
+        top: -5%
+        left: 30%
+      // Spoon
+      &:nth-child(2)
+        top: -5%
+        left: -10%
+      // Sphere Magic
+      &:nth-child(3)
+        top: 50%
+        left: -14%
+      // Sodium Citrate
+      &:nth-child(4)
+        top: 70%
+        left: 0%
+      // Calcium Lactate Gluconate
+      &:nth-child(5)
+        top: 90%
+        left: 20%
+      // Calcium Chloride
+      &:nth-child(6)
+        top: 70%
+        left: 60%
+      // Xanthan Gum
+      &:nth-child(7)
+        top: 50%
+        left: 65%
+      // High-Accuracy Scale
+      &:nth-child(8)
+        top: 10%
+        left: -14%
+      // Silicon Mold
+      &:nth-child(9)
+        top: 20%
+        left: 70%
+      // Caviar Dosing Tray
+      &:nth-child(10)
+        top: 5%
+        left: 55%
