--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -52,19 +52,22 @@
   .row
     .span4
       =image_tag 'https://www.filepicker.io/api/file/RY0MPYKRRkOLpCNqGZpN'
+      .small Pine Needle Sphere with Lemon Granita
       .text-center
         %h4 Reverse Spherification
-        Pine Needle Sphere with Lemon Granita
+        
     .span4
       =image_tag 'https://www.filepicker.io/api/file/BwIi8kdRFGLEIWaWcXPI'
+      .small Beet Sphere with Shaved Goat Cheese
       .text-center
         %h4 Frozen Reverse Spherification
-        Beet Sphere with Shaved Goat Cheese
+        
     .span4
       =image_tag 'https://www.filepicker.io/api/file/PFUrsvzWReCkVxlMGXBG'
+      .small Chocolate Caviar with Almond Custard and Mint Gelée
       .text-center
         %h4 Direct Spherification
-        Chocolate Caviar with Almond Custard and Mint Gelée
+        
 
   .row.section
     .span6.offset3
@@ -73,8 +76,7 @@
   .row.section
     .span12
       %h2.text-center
-        Buy a kit to help you get started or 
-        = link_to 'browse the course now.', course_activity_path(@course, @course.first_published_activity)
+        Buy a kit to help you get started
 
 %hr
 .container
