[spherification] added templates for b, c

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -2,186 +2,10 @@
 - content_for :description, course.short_description
 - @body_tag_attributes = {:'ng-app' => "ChefStepsApp"}
 
-.container
-  .row.section
-    .span6
-      %h1= "#{course.title} Course"
-      .video-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject", :csenforceaspect => true}
-        %iframe(ng-style="setHeight()" csenforceaspect){src: youtube_url('ArXEEexWHPA')}
-      .section
-        %p= course.description
-      %h4.text-center
-        %i.icon-comment-alt
-        Comments or Questions?
-        = link_to 'Visit the Forum', 'http://forum.chefsteps.com'
-      
-    .span6
-      .well
-        - if current_user
-          - if current_user.course_ids.include?(@course.id)
-            = link_to 'Continue Course', [@course, @course.first_published_activity], class: 'btn, btn-primary btn-large'
-          - else
-            = form_tag enroll_course_path(@course) do
-              = submit_tag 'Enroll', class: 'btn btn-primary btn-large'
-        - else
-          .flat-form
-            %h2 Sign Up To Enroll
-            = form_for @new_user, url: registration_path(@new_user), class: 'form-inline' do |f|
-              = f.text_field :name, {placeholder: 'name', required: true, class: 'input-block-level'}
-              = f.email_field :email, {placeholder: 'email', required: true, class: 'input-block-level'}
-              .input-block-level-password
-                = f.password_field :password, {placeholder: 'password', required: true, class: 'input-block-level'}
-                = link_to 'Show', 'javascript:void(0);', class: 'btn btn-secondary', id: 'user-password-show'
-              = f.submit 'Enroll Now', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
-      .well   
-        - if @course.users.count > 1
-          %h4= "#{@course.users.count} people have enrolled."
-        %h4 Here's what people have accomplished with the course:
-        .horizontal-slider{data: {direction: 'right'}}
-          .horizontal-slider-wrap
-            - @course.uploads.each do |upload|
-              = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.recipe_name, image: upload.image_id
-          %div{class: "horizontal-slider-btn-right btn btn-circle"}
-            %i{class: "icon-chevron-right"}
-          %div{class: "horizontal-slider-shadow-overlay-right"}
-
-  .row.section
-    .span12
-      %h2.text-center
-        Be more creative in your kitchen
-  .row
-    .span4
-      =image_tag 'https://www.filepicker.io/api/file/RY0MPYKRRkOLpCNqGZpN'
-      .small Pine Needle Sphere with Lemon Granita
-      .text-center
-        %h4 Reverse Spherification
-        
-    .span4
-      =image_tag 'https://www.filepicker.io/api/file/BwIi8kdRFGLEIWaWcXPI'
-      .small Beet Sphere with Shaved Goat Cheese
-      .text-center
-        %h4 Frozen Reverse Spherification
-        
-    .span4
-      =image_tag 'https://www.filepicker.io/api/file/PFUrsvzWReCkVxlMGXBG'
-      .small Chocolate Caviar with Almond Custard and Mint Gelée
-      .text-center
-        %h4 Direct Spherification
-        
-
-  .row.section
-    .span6.offset3
-      %p In this short-course, you will learn all three techniques, starting with reverse spherification, which is surprisingly easy. The course then teaches you the helpful refinement of this technique, called frozen-reverse spherification. Finally, you'll master the more challenging technique of direct spherification. At the end of the course, you will have the opportunity to demonstrate your proficiency with these techniques and also prove your understanding of why spherification works to certify that you've mastered this popular modernist technique.
-
-  .row.section
-    .span12
-      %h2.text-center
-        Buy a kit to help you get started
-
-%hr
-.container
-  .row.section
-    .span6
-      / = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
-      .annotated.annotated-creation
-        = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
-        .annotations
-          .annotation Syringe 
-          .annotation Stainless-steel straining spoon
-          .annotation 25 g Sphere Magic
-          .annotation 25 g Sodium Citrate
-          .annotation 50 g Calcium Lactate Gluconate
-          .annotation 50 g Calcium Chloride
-          .annotation 50 g Xanthan Gum
-      .row-fluid
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/Mn5unIy2TSGXjBRiRsnj'
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA'
-    .span5.offset1.lead
-      %h2 The Creative Kit
-      The Creative Kit includes the technical ingredients you'll need to complete our reverse and direct spherification modules. It has most of the tools as well, except for a high-accuracy scale and the mold needed for frozen-reverse spherification.
-      .well.section
-        %h4.text-center= "The Creative Kit $39"
-        = buy_now(311070543)
-
-
-%hr
-.container
-  .row.section
-    .span6
-      / = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
-      .annotated.annotated-enthusiast
-        = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
-        .annotations
-          .annotation Syringe 
-          .annotation Stainless-steel straining spoon
-          .annotation 25 g Sphere Magic
-          .annotation 25 g Sodium Citrate
-          .annotation 50 g Calcium Lactate Gluconate
-          .annotation 50 g Calcium Chloride
-          .annotation 50 g Xanthan Gum
-          .annotation High-Accuracy Scale
-          .annotation Silicon Mold
-      .row-fluid
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/10jMQrfrTYazji1Sc4XA'
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/NiJGuT9RkOOY9RUqDpyQ'
-    .span5.offset1.lead
-      %h2 The Enthusiast Kit
-      The Enthusiasts Kit includes all of the technical ingredients and tools you'll need to complete our entire course. It adds a high-accuracy scale (capable of weighing 1/100th of a gram) and a high-quality silicon mold used for frozen-reverse spherification.
-      .well.section
-        %h4.text-center= "The Enthusiast Kit $70"
-        = buy_now(311979727)
-
-%hr
-.container
-  .row.section
-    .span6
-      /= image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
-      .annotated.annotated-professional
-        = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
-        .annotations
-          .annotation Syringe 
-          .annotation Stainless-steel straining spoon
-          .annotation 25 g Sphere Magic
-          .annotation 25 g Sodium Citrate
-          .annotation 50 g Calcium Lactate Gluconate
-          .annotation 50 g Calcium Chloride
-          .annotation 50 g Xanthan Gum
-          .annotation High-Accuracy Scale
-          .annotation Silicon Mold
-          .annotation Caviar Dosing Tray
-      .row-fluid
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'
-        .span6
-          = image_tag 'https://www.filepicker.io/api/file/KLRyOQ6fTB2K2y2rc2Gq'
-    .span5.offset1.lead
-      %h2 The Professional Kit
-      The Professional Kit includes everything in our Enthusiast Kit, plus a professional caviar dosing tray used for direct spherification. This hard to find tool makes it easy to quickly turn any liquid into small spheres bursting with flavor
-      .well.section
-        %h4.text-center= "The Professional Kit $119"
-        = buy_now(311979875)
-
-.container
-  .row.section
-    %h2.text-orange Instructors
-  .row.section
-    .span2
-      = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
-    .span4
-      :markdown
-        #{bio_chris.copy.to_s}
-    .span2
-      = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
-    .span4
-      :markdown
-        #{bio_grant.copy.to_s}
-
-%hr
-.container
-  .row.section
-    = render 'layouts/disqus_comments', disqus_id: "course-#{course.id}", disqus_title:course.title, disqus_url: course_url
-
+- ab_test('spherification', {'spheres_a' => 1}, {'spheres_b' => 1}, {'spheres_c' => 1}) do |spherification|
+  - if spherification == 'spheres_a'
+    = render 'spherification_a'
+  - elsif spherification == 'spheres_b'
+    = render 'spherification_b'
+  - elsif spherification == 'spheres_c'
+    = render 'spherification_c'
