--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -35,15 +35,16 @@
               = f.submit 'Enroll Now', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
       .well   
         - if @course.users.count > 1
-          %h4= "#{@course.users.count} people have enrolled."
-        %h4 Here's what people have accomplished with the course:
-        .horizontal-slider{data: {direction: 'right'}}
-          .horizontal-slider-wrap
-            - @course.uploads.each do |upload|
-              = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.recipe_name, image: upload.image_id
-          %div{class: "horizontal-slider-btn-right btn btn-circle"}
-            %i{class: "icon-chevron-right"}
-          %div{class: "horizontal-slider-shadow-overlay-right"}
+          %h4= "Current enrollment: #{@course.users.count}"
+        - if @course.uploads.count > 3
+          %h4 Here are some things students have accomplished so far:
+          .horizontal-slider{data: {direction: 'right'}}
+            .horizontal-slider-wrap
+              - @course.uploads.each do |upload|
+                = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.recipe_name, image: upload.image_id
+            %div{class: "horizontal-slider-btn-right btn btn-circle"}
+              %i{class: "icon-chevron-right"}
+            %div{class: "horizontal-slider-shadow-overlay-right"}
 
   .row.section
     .span12
