--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -45,9 +45,10 @@
             .tab-pane-header
               %h3 Enroll into your first course today!
             - @courses.each do |course|
-              - course_title = capture do
-                = link_to course.title, course
-              = render 'shared/media_list_item', image: course.featured_image, title: course_title, text: ''
+              - unless course.id == 1
+                - course_title = capture do
+                  = link_to "#{course.title} Course", course
+                = render 'shared/media_list_item', image: course.featured_image, title: course_title, text: ''
         .tab-pane#uploads
           - @user.uploads.each do |upload|
             - upload_title = capture do
