--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -86,14 +86,14 @@
   .row.section
     .span6
       / = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
-      .annotated.annotated-creation
+      .annotated.annotated-creative
         = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
         .annotations
           .annotation Syringe 
-          .annotation Stainless-steel straining spoon
+          .annotation Spherification Straining Spoon
           .annotation 25 g Sphere Magic
           .annotation 25 g Sodium Citrate
-          .annotation 50 g Calcium Lactate Gluconate
+          .annotation 50 g Calcium Gluconate
           .annotation 50 g Calcium Chloride
           .annotation 50 g Xanthan Gum
       .row-fluid
@@ -118,14 +118,14 @@
         = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
         .annotations
           .annotation Syringe 
-          .annotation Stainless-steel straining spoon
+          .annotation Spherification Straining Spoon
           .annotation 25 g Sphere Magic
           .annotation 25 g Sodium Citrate
-          .annotation 50 g Calcium Lactate Gluconate
+          .annotation 50 g Calcium Gluconate
           .annotation 50 g Calcium Chloride
           .annotation 50 g Xanthan Gum
           .annotation High-Accuracy Scale
-          .annotation Silicon Mold
+          .annotation Silicon Hemisphere Mold
       .row-fluid
         .span6
           = image_tag 'https://www.filepicker.io/api/file/10jMQrfrTYazji1Sc4XA'
@@ -147,15 +147,15 @@
         = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
         .annotations
           .annotation Syringe 
-          .annotation Stainless-steel straining spoon
+          .annotation Spherification Straining Spoon
           .annotation 25 g Sphere Magic
           .annotation 25 g Sodium Citrate
-          .annotation 50 g Calcium Lactate Gluconate
+          .annotation 50 g Calcium Gluconate
           .annotation 50 g Calcium Chloride
           .annotation 50 g Xanthan Gum
           .annotation High-Accuracy Scale
-          .annotation Silicon Mold
-          .annotation Caviar Dosing Tray
+          .annotation Silicon Hemisphere Mold
+          .annotation Rapid Caviar Maker
       .row-fluid
         .span6
           = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'
