--- a/app/assets/stylesheets/annotations.css.sass
+++ b/app/assets/stylesheets/annotations.css.sass
@@ -36,7 +36,7 @@
       -moz-transform: scale(0.8)
       -o-transform: scale(0.8)
 
-.annotated.annotated-creation
+.annotated.annotated-creative
   .annotations
     .annotation
       // Syringe
@@ -55,10 +55,10 @@
       &:nth-child(4)
         top: 70%
         left: 0%
-      // Calcium Lactate Gluconate
+      // Calcium Gluconate
       &:nth-child(5)
         top: 90%
-        left: 20%
+        left: 25%
       // Calcium Chloride
       &:nth-child(6)
         top: 70%
@@ -87,10 +87,10 @@
       &:nth-child(4)
         top: 70%
         left: 0%
-      // Calcium Lactate Gluconate
+      // Calcium Gluconate
       &:nth-child(5)
         top: 90%
-        left: 20%
+        left: 25%
       // Calcium Chloride
       &:nth-child(6)
         top: 70%
@@ -127,10 +127,10 @@
       &:nth-child(4)
         top: 70%
         left: 0%
-      // Calcium Lactate Gluconate
+      // Calcium Gluconate
       &:nth-child(5)
         top: 90%
-        left: 20%
+        left: 25%
       // Calcium Chloride
       &:nth-child(6)
         top: 70%
