[annotations] update with SHMP

--- a/app/assets/stylesheets/annotations.css.sass
+++ b/app/assets/stylesheets/annotations.css.sass
@@ -123,10 +123,10 @@
       &:nth-child(3)
         top: 50%
         left: -14%
-      // Sodium Citrate
+      // SHMP
       &:nth-child(4)
         top: 70%
-        left: 0%
+        left: 10%
       // Calcium Gluconate
       &:nth-child(5)
         top: 90%
