--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -149,7 +149,7 @@
           .annotation Syringe 
           .annotation Spherification Straining Spoon
           .annotation 25 g Sphere Magic
-          .annotation 25 g Sodium Citrate
+          .annotation 25 g SHMP
           .annotation 50 g Calcium Gluconate
           .annotation 50 g Calcium Chloride
           .annotation 50 g Xanthan Gum
